--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 body {
   padding: 0px;
   margin: 0px;
@@ -46,4 +52,142 @@ body {
 /*fonts-family*/
 /*fonts-sizes*/
 /*font-weights*/
+.main-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 65%;
+  background-color: #1c1938;
+  -webkit-box-shadow: 0px 20px 20px -10px rgba(23, 25, 41, 0.203087);
+          box-shadow: 0px 20px 20px -10px rgba(23, 25, 41, 0.203087);
+  border-radius: 8px;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+.info-container {
+  padding: 2em;
+}
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-weight: 700;
+  font-size: 1.1em;
+  color: white;
+  padding: 1em;
+}
+
+.header h1 {
+  margin-bottom: 0.475em;
+}
+
+.header span {
+  color: #aa5cdb;
+}
+
+.header p {
+  font-family: "Inter", sans-serif;
+  font-size: 0.9375em;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.75);
+  padding-right: 2em;
+  opacity: 0.75;
+  line-height: 1.5625em;
+}
+
+.stats {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  line-height: 1.8125em;
+  padding-bottom: 1px;
+}
+
+.stats h3 {
+  color: white;
+  font-size: 1.5em;
+  margin-bottom: 0.125em;
+}
+
+.stats p {
+  color: rgba(255, 255, 255, 0.6);
+  font-family: "Lexend Deca", sans-serif;
+  font-size: 0.75em;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.0625em;
+}
+
+.stats .box-2 {
+  padding-left: 2.5em;
+}
+
+.stats .box-3 {
+  padding-left: 2.2em;
+}
+
+.image-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #aa5cdb;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+.image-container #image {
+  opacity: 0.8;
+  mix-blend-mode: multiply;
+}
+
+/*The mix-blend-mode property specifies how an element's content should blend with its direct parent background.*/
+@media only screen and (max-width: 395px) {
+  .main-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    width: 90%;
+  }
+  .info-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    width: 90%;
+  }
+  .stats {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    width: 90%;
+  }
+  .image-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    width: 90%;
+  }
+}
 /*# sourceMappingURL=styles.css.map */
