--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -87,18 +87,47 @@
 @media only screen and (max-width: 395px) {
   .main-container {
     flex-direction: column-reverse;
-    width: 90%;
+    width: 20.4375em;
+    height: 48.75em;
+  }
+  .header {
+    width: 100%;
+    h1 {
+      font-size: 1.65em;
+      text-align: center;
+    }
+    p {
+      font-size: 0.8375em;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
   }
   .info-container {
     flex-direction: column-reverse;
-    width: 90%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
   }
   .stats {
-    flex-direction: column-reverse;
-    width: 90%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    .box-2 {
+      padding-left: 0;
+    }
+    .box-3 {
+      padding-left: 0;
+    }
   }
   .image-container {
     flex-direction: column-reverse;
-    width: 90%;
+    object-fit: cover;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+    border-bottom-right-radius: 0px;
+    width: 100%;
+    height: 100%;
   }
 }
