--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -86,6 +86,8 @@
 
 @media only screen and (max-width: 395px) {
   .main-container {
+    justify-content: center;
+    align-items: center;
     flex-direction: column-reverse;
     width: 20.4375em;
     height: 48.75em;
@@ -97,14 +99,14 @@
       text-align: center;
     }
     p {
-      font-size: 0.8375em;
+      font-size: 0.827em;
       text-align: center;
       margin: 0;
       padding: 0;
     }
   }
   .info-container {
-    flex-direction: column-reverse;
+    flex-direction: column;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -114,15 +116,19 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    padding: 0;
     .box-2 {
       padding-left: 0;
     }
     .box-3 {
       padding-left: 0;
     }
+    #facts {
+      padding: 0;
+    }
   }
   .image-container {
-    flex-direction: column-reverse;
+    flex-direction: column;
     object-fit: cover;
     border-top-right-radius: 8px;
     border-top-left-radius: 8px;
